# Clinibrium

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  check.sh  docker-compose.yml
.claude/: settings.json
.claude/hooks/: verify-clinical-invariants.sh
.claude/skills/clinical-rail-authoring/: SKILL.md
backend/: pyproject.toml  railway.json  requirements.txt
backend/clinibrium/: __init__.py  config.py
backend/clinibrium/api/: __init__.py  decision.py  evaluate.py  main.py  what_would_change.py
backend/clinibrium/audit/: __init__.py  engine.py
backend/clinibrium/contracts/: __init__.py  audit.py  enums.py  features.py  results.py
backend/clinibrium/counterfactual/: __init__.py  engine.py
backend/clinibrium/differential_engine/: __init__.py  criteria.py  engine.py
backend/clinibrium/fhir/: __init__.py  mapping.py
backend/clinibrium/grounding/: __init__.py  base.py  factory.py  inline.py  pgvector.py
backend/clinibrium/i18n/: __init__.py  labels.py
backend/clinibrium/ml_client/: __init__.py  client.py  stub_server.py
backend/clinibrium/orchestrator/: __init__.py  pipeline.py
backend/clinibrium/rails/: __init__.py  engine.py  ordering.py  thresholds.py
backend/clinibrium/reasoner/: __init__.py  engine.py  pick_model.py  privacy.py
backend/clinibrium/redflag_engine/: __init__.py  engine.py  rules.py
backend/clinibrium/storage/: __init__.py  persist.py
backend/tests/: test_api_evaluate.py  test_contracts.py  test_counterfactual.py  test_differential_engine.py  test_fhir.py  test_grounding.py  test_health.py  test_i18n_lang.py  test_ml_client.py  test_orchestrator.py  test_rails.py  test_reasoner.py  test_redflag_engine.py
demo/: start.sh
docs/: CONTRACT_predict.md  DEPLOY_RAILWAY.md
frontend/: package-lock.json  package.json  railway.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ClinicalCaseReceipt.tsx  DixHallpikeClient.tsx  LanguageProvider.tsx  LanguageSwitch.tsx  NystagmusTrace.tsx  Onboarding.tsx  PageHeader.tsx  PipelineDemo.tsx  PipelineRail.tsx  PrivacyEgressMeter.tsx  RealCaseForm.tsx  SiteFooter.tsx  SiteHeader.tsx  WelcomeOnboarding.tsx  WhatWouldChange.tsx
frontend/app/demo/: page.tsx
frontend/app/dix-hallpike/: page.tsx
frontend/lib/: api.test.ts  api.ts  i18n.test.ts  i18n.ts  labels.ts  nystagmus.test.ts  nystagmus.ts  presets.ts  types.ts
ml_engine/: .gitignore  check.sh  pyproject.toml  railway.json  requirements.txt
ml_engine/ml_engine/: __init__.py  train.py
ml_engine/ml_engine/artifacts/: DATA_CARD.md
ml_engine/ml_engine/core/: __init__.py  abstain.py  calibrate.py  encode.py  explain.py  model.py  spec.py  synth.py
ml_engine/ml_engine/domains/: __init__.py  toy.py  vertigo.py
ml_engine/ml_engine/service/: __init__.py  app.py
ml_engine/tests/: test_calibrate_abstain.py  test_explain.py  test_model.py  test_service.py  test_smoke.py  test_spec_vertigo.py  test_synth_encode.py  test_toy_domain.py  test_train.py
spikes/mediapipe-nystagmus/: README.md  index.html
