[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_engine"
version = "0.1.0"
description = "Clinibrium Track B — capa de confianza probabilística agnóstica de dominio (experimental, datos sintéticos). Aislada de A."
requires-python = ">=3.12"
# Deps ML FIJADAS (Codex: nada de wildcards/>=; lock exacto tras resolver).
# Este paquete tiene su PROPIO venv; el core `clinibrium` (Track A) NUNCA
# instala ni ve estas deps (INV-6).
dependencies = [
    "numpy==1.26.4",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "catboost==1.2.7",
    "shap==0.46.0",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.14.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_engine*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
