[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_engine"
version = "0.1.0"
description = "Clinibrium Track B — domain-agnostic probabilistic confidence layer (experimental, synthetic data). Isolated from A."
requires-python = ">=3.12"
# PINNED ML deps (Codex: no wildcards/>=; exact lock after resolving).
# This package has its OWN venv; the `clinibrium` core (Track A) NEVER
# installs nor sees these deps (INV-6).
dependencies = [
    "numpy==1.26.4",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "catboost==1.2.7",
    "shap==0.46.0",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "hypercorn==0.17.3",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.14.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_engine*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    # deprecation noise from shap/matplotlib (not our code)
    "ignore::PendingDeprecationWarning",
    "ignore::DeprecationWarning:shap.*",
]
